feat(makefiles): update program names in Makefiles for consistency

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: dcastor <dcastor@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/09 14:36:04 by dcastor           #+#    #+#              #
-#    Updated: 2025/07/16 09:52:08 by dcastor          ###   ########.fr        #
+#    Updated: 2025/07/16 15:21:33 by dcastor          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@
 # ============================================================================== #
 
 # 📛 Nom du programme
-NAME := "Moar brainz!"
+NAME := ex01
 
 # 📦 Compiler & Flags
 CXX := c++
