--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: dcastor <dcastor@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/09 14:36:04 by dcastor           #+#    #+#              #
-#    Updated: 2025/07/16 10:21:50 by dcastor          ###   ########.fr        #
+#    Updated: 2025/07/16 15:21:43 by dcastor          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@
 # ============================================================================== #
 
 # 📛 Nom du programme
-NAME := "HI THIS IS BRAIN"
+NAME := ex02
 
 # 📦 Compiler & Flags
 CXX := c++
