--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: dcastor <dcastor@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/09 14:36:04 by dcastor           #+#    #+#              #
-#    Updated: 2025/07/16 11:36:06 by dcastor          ###   ########.fr        #
+#    Updated: 2025/07/16 15:22:02 by dcastor          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@
 # ============================================================================== #
 
 # 📛 Nom du programme
-NAME := "Sed is for losers"
+NAME := ex04
 
 # 📦 Compiler & Flags
 CXX := c++
