--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -6,7 +6,7 @@
 #    By: dcastor <dcastor@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/09 14:36:04 by dcastor           #+#    #+#              #
-#    Updated: 2025/07/16 14:41:55 by dcastor          ###   ########.fr        #
+#    Updated: 2025/07/16 15:22:10 by dcastor          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@
 # ============================================================================== #
 
 # 📛 Nom du programme
-NAME := "Harl 2.0"
+NAME := ex05
 
 # 📦 Compiler & Flags
 CXX := c++
